# ft_ls

./: CMakeLists.txt  README.md  algo.txt  author  flags.c  ft_ls.c  ft_ls.h  ft_ls.h.gch  ft_ls_input.c  test_ft_ls.c  tmpft_ls.c
Final/: Makefile  ft_ls
Final/includes/: ft_ls.h
Final/libft/: Makefile
Final/srcs/: flags.c  ft_addsymb.c  ft_free_list.c  ft_ls.c  ft_ls_errors.c  ft_strencut.c  ft_strncut.c  init.c  print.c  print_2.c  print_total.c  push_back.c  recursion.c  restruct.c  sort.c  struct_filenames.c  whats_specific.c
Goga/: a.out  ft_ls.c  ft_ls.h  ft_ls.h.gch  ft_ls_errors.c  ft_ls_free_list.c  ft_ls_input.c  ft_ls_lists.c  ft_ls_valid.c  test_ls.c
Goga/Ft_ls/: Makefile  a.out  ft_ls  ft_ls.c  ft_ls.h  ft_ls.h.gch  ft_ls_errors.c  ft_ls_input.c
Goga/Ft_ls/includes/: ft_ls.h
Goga/Ft_ls/libft/: libft.h.gch
Goga/Ft_ls/libft/includes/: libft.h
Goga/Ft_ls/srcs/: ft_ls.c  ft_ls_errors.c  ft_ls_flags.c  ft_ls_input.c  ft_ls_lists.c  ft_ls_valid.c
includes/: ft_ls.h
libft/: Makefile  libft.h
my_ls/: CMakeLists.txt  a.out  flags.c  ft_addsymb.c  ft_ls.c  ft_ls.h  ft_strencut.c  ft_strncut.c  init.c  print.c  print_2.c  print_total.c  recursion.c  restruct.c  sort.c  struct_filenames.c  whats_specific.c
my_ls/a.out.dSYM/Contents/Resources/DWARF/: a.out
my_ls/libft/: libft.h.gch
srcs/: flags.c  ft_addsymb.c  ft_free_list.c  ft_ls.c  ft_ls_errors.c  ft_strencut.c  ft_strncut.c  init.c  print.c  print_2.c  print_total.c  push_back.c  recursion.c  restruct.c  sort.c  struct_filenames.c  whats_specific.c
(+1 files in other folders)
